# RCI-Media-Team-Skills

./: README.md
Design System/: DESIGN.md  README.md  SKILL.md
Design System/preview/: brand-globes.html  brand-grunge.html  brand-mark.html  brand-papers.html  brand-red-paper.html  brand-stickers.html  brand-texture-overlay.html  brand-textures.html  brand-wordmark.html  colors-neutrals.html  colors-pairings.html  colors-primary.html  components-article-card.html  components-buttons.html  components-footer-lockup.html  components-form.html  components-headline-slab.html  components-pull-quote.html  components-tags.html  spacing-borders.html  spacing-elevation.html  spacing-scale.html  type-body.html  type-display.html  type-families.html  type-scale.html  type-serif.html
Video Essay Script Drafter/: youtube-video-essay-script.skill
footage-sourcer/: README.md  `footage-sourcer` Antigravity Skill.md  credits_manifest.txt  sourcing_spec.md
footage-sourcer/.agent/skills/footage-sourcer/: README.md  SKILL.md
footage-sourcer/.agent/skills/footage-sourcer/resources/: source_rules.json
footage-sourcer/.agent/skills/footage-sourcer/scripts/: log_credits.py
video-use/: README.md  SKILL.md
video-use/helpers/: cut_clips.py  framing.py  render.py  test_cut_clips.py
youtube-downloader/: .gitignore  README.md  pyproject.toml
youtube-downloader/tests/: test_transcoder.py
youtube-downloader/youtube_downloader/: cli.py  downloader.py  transcoder.py
